[package]
name = "crawler"
version = "0.1.0"
authors = ["Roland Szabo <rolisz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json", "blocking"] }
tokio = { version = "0.2", features = ["full"] }
quick-xml = { version = "*", features = [ "serialize" ] }
serde = { version = "1.0", features = [ "derive" ] }
rayon = { version = "*" }
chrono = { version = "0.4", features = ["serde"] }
select = "0.4.3"